# Pablo

./: .vercelignore  DEPLOY.md  auth_testing.md  design_guidelines.json  image_testing.md  vercel.json
.emergent/: emergent.yml
backend/: .env  .env.example  .vercelignore  Dockerfile  pip.conf  pyproject.toml  render.yaml  requirements.txt  server.py  vercel.json
backend/tests/: test_syvren_auth.py  test_tutor_api.py
frontend/: .env  .env.example  craco.config.js  package.json  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_iter2.xml  pytest_results.xml
