[project]
name = "syvren-backend"
version = "1.0.0"
description = "SYVREN — Tutor Metodológico backend (FastAPI + MongoDB + httpx → Emergent LLM proxy)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.25.0",
    "motor==3.3.1",
    "pymongo==4.5.0",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "pypdf==6.11.0",
    "httpx>=0.27.0",
]

[tool.vercel]
entrypoint = "server:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
