[project]
name = "syvren-backend"
version = "1.0.0"
description = "SYVREN — Tutor Metodologico backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.30.1",
    "motor==3.5.0",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "pypdf==4.3.1",
    "httpx>=0.27.0",
]

[tool.vercel]
entrypoint = "server:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
